--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "~1.4.8",
     "bootstrap": "~3.3.6",
     "angular-resource": "~1.4.8",
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angular-route": "~1.4.8"
   }
 }
