--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-resource": "~1.4.8",
     "font-awesome": "fontawesome#~4.5.0",
     "angular-route": "~1.4.8",
-    "ng-tags-input": "~3.0.0"
+    "ng-tags-input": "~3.0.0",
+    "angular-ui-calendar": "~1.0.1"
   }
 }
