--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "font-awesome": "fontawesome#~4.5.0",
     "angular-route": "~1.4.8",
     "ng-tags-input": "~3.0.0",
-    "angular-ui-calendar": "~1.0.1"
+    "angular-ui-calendar": "~1.0.1",
+    "highcharts-ng": "~0.0.11",
+    "highcharts": "~4.2.1"
   }
 }
