--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,13 @@
 			<version>4.0</version>
 		</dependency>
 
+		<!-- ICAL -->
+		<dependency>
+			<groupId>org.mnode.ical4j</groupId>
+			<artifactId>ical4j</artifactId>
+			<version>2.0-beta1</version>
+		</dependency>
+
 		<!-- APIs -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
