--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,20 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<!-- Unit testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.10.17</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 </project>
