Allow the administrator to add and remove working hour days

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-ui-calendar": "~1.0.1",
     "highcharts-ng": "~0.0.11",
     "highcharts": "~4.2.1",
-    "angular-bootstrap-colorpicker": "~3.0.22"
+    "angular-bootstrap-colorpicker": "~3.0.22",
+    "angular-bootstrap": "~0.14.3"
   }
 }
