--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "highcharts-ng": "~0.0.11",
     "highcharts": "~4.2.1",
     "angular-bootstrap-colorpicker": "~3.0.22",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "angular-bootstrap-slider": "~0.1.21"
   }
 }
