--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 							<dependency>
 								<groupId>org.hibernate</groupId>
 								<artifactId>hibernate-jpamodelgen</artifactId>
-								<version>4.3.7.Final</version>
+								<version>5.0.6.Final</version>
 							</dependency>
 						</dependencies>
 					</plugin>
@@ -160,7 +160,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.11.Final</version>
+			<version>5.0.6.Final</version>
 			<scope>${packaging.hibernate}</scope>
 		</dependency>
 		<dependency>
@@ -172,7 +172,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.1.3.Final</version>
+			<version>5.2.2.Final</version>
 			<scope>${packaging.hibernate}</scope>
 		</dependency>
 		<dependency>
@@ -185,6 +185,12 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 			<version>3.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>javax.transaction-api</artifactId>
+			<version>1.2</version>
+			<scope>${packaging.hibernate}</scope>
 		</dependency>
 
 		<!-- Database drivers -->
@@ -222,7 +228,7 @@
 		<dependency>
 			<groupId>org.jadira.usertype</groupId>
 			<artifactId>usertype.core</artifactId>
-			<version>3.2.0.GA</version>
+			<version>5.0.0.GA</version>
 		</dependency>
 
 		<!-- Apache commons -->
