--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,8 +5,17 @@
 
 	<display-name>Capacity planning tools</display-name>
 
+	<context-param>
+		<param-name>shiroConfigLocations</param-name>
+		<param-value>classpath:shiro.ini</param-value>
+	</context-param>
+
 	<listener>
 		<listener-class>de.egore911.capacity.util.listener.StartupListener</listener-class>
+	</listener>
+
+	<listener>
+		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
 	</listener>
 
 	<welcome-file-list>
@@ -40,4 +49,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>ShiroFilter</filter-name>
+		<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>ShiroFilter</filter-name>
+		<url-pattern>/rest/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
 </web-app>
