--- a/pom.xml
+++ b/pom.xml
@@ -360,6 +360,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
+			<artifactId>angular-shiro</artifactId>
+			<version>0.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-bootstrap-colorpicker</artifactId>
 			<version>3.0.11</version>
 		</dependency>
