Add project name to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 	<artifactId>capacity-web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+
+	<name>${project.artifactId}</name>
 	<description>Simple web UI to plan employee capacities</description>
 
 	<distributionManagement>
