--- a/pom.xml
+++ b/pom.xml
@@ -411,6 +411,11 @@
 			<version>2.3.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>awesome-bootstrap-checkbox</artifactId>
+			<version>0.3.7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>highcharts</artifactId>
 			<version>4.2.1</version>
