Fix angular version to 1.5.5
Somehow maven picks 1.5.0-rc2 from time to time

--- a/pom.xml
+++ b/pom.xml
@@ -484,6 +484,11 @@
 				<artifactId>jackson-jaxrs-json-provider</artifactId>
 				<version>${version.jackson}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.webjars.bower</groupId>
+				<artifactId>angular</artifactId>
+				<version>1.5.5</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
