--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-joda</artifactId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>${version.jackson}</version>
 		</dependency>
 		<dependency>
@@ -225,6 +225,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.0.6.Final</version>
+			<scope>${packaging.hibernate}</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
 			<version>5.0.6.Final</version>
 			<scope>${packaging.hibernate}</scope>
 		</dependency>
@@ -282,18 +288,6 @@
 			<artifactId>jtds</artifactId>
 			<version>1.3.1</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<!-- joda-time -->
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jadira.usertype</groupId>
-			<artifactId>usertype.core</artifactId>
-			<version>5.0.0.GA</version>
 		</dependency>
 
 		<!-- Apache commons -->
