Add a selenium 3.0.0 based smoke test
This clicks all the elements from the menu and checks whether the page changes. Test
is disabled not to harm automated builds

--- a/pom.xml
+++ b/pom.xml
@@ -447,7 +447,12 @@
 			<version>2.5</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.0.0-beta1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
