--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.5.1</version>
 				<configuration>
 					<source>${version.java}</source>
 					<target>${version.java}</target>
@@ -38,7 +38,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.0.0</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -57,7 +57,7 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
-				<version>2.2.0</version>
+				<version>2.2.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -74,7 +74,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.5.201505241946</version>
+				<version>0.7.7.201606060606</version>
 				<executions>
 					<execution>
 						<goals>
@@ -102,7 +102,7 @@
 					<plugin>
 						<groupId>org.bsc.maven</groupId>
 						<artifactId>maven-processor-plugin</artifactId>
-						<version>2.2.4</version>
+						<version>3.1.0</version>
 						<executions>
 							<execution>
 								<id>process</id>
@@ -163,9 +163,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.jersey>2.22.2</version.jersey>
+		<version.jersey>2.23.2</version.jersey>
 		<version.java>1.8</version.java>
-		<version.jackson>2.7.6</version.jackson>
+		<version.jackson>2.8.3</version.jackson>
 		<maven.compiler.source>${version.java}</maven.compiler.source>
 		<maven.compiler.target>${version.java}</maven.compiler.target>
 	</properties>
@@ -268,13 +268,13 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>6.0.2</version>
+			<version>6.0.4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4.1208.jre7</version>
+			<version>9.4.1211.jre7</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -295,6 +295,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 			<version>4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
 		</dependency>
 
 		<!-- ICAL -->
